// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DatacenterTab /> renders correctly with assisted installer 1`] = `
<Fragment>
  <PageSection
    variant="light"
  >
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Title
          className="ocm-ocp-datacenter-title"
          headingLevel="h2"
        >
          Assisted Installer
        </Title>
        <TechPreviewBadge />
      </StackItem>
      <StackItem>
        The easiest way to install OpenShift on your own infrastructure with step-by-step guidance, preflight validations, and smart defaults. This method supports both x86-64 and arm64 CPU architectures.
      </StackItem>
      <StackItem>
        <Button
          component={
            Object {
              "$$typeof": Symbol(react.forward_ref),
              "propTypes": Object {
                "innerRef": [Function],
                "onClick": [Function],
                "replace": [Function],
                "target": [Function],
                "to": [Function],
              },
              "render": [Function],
            }
          }
          to="/assisted-installer/clusters/~new"
        >
          Create cluster
        </Button>
      </StackItem>
    </Stack>
  </PageSection>
  <PageSection>
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Title
          headingLevel="h2"
        >
          Other datacenter options
        </Title>
      </StackItem>
      <StackItem>
        Create clusters on supported infrastructure using our extensive documentation and installer program.
      </StackItem>
      <StackItem>
        <Table
          aria-label="Installation options table"
          borders={true}
          canSelectAll={true}
          canSortFavorites={true}
          cells={
            Array [
              "Infrastructure provider",
              "Installation options",
            ]
          }
          className="install-options-table"
          contentId="expanded-content"
          dropdownDirection="down"
          dropdownPosition="right"
          expandId="expandable-toggle"
          gridBreakPoint="grid-md"
          isStickyHeader={false}
          isTreeTable={false}
          ouiaSafe={true}
          role="grid"
          rowLabeledBy="simple-node"
          rows={
            Array [
              Array [
                <React.Fragment>
                  <Link
                    to="/install/metal"
                  >
                    Bare Metal (x86_64)
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/arm"
                  >
                    Bare Metal (ARM)
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/azure-stack-hub"
                  >
                    Azure Stack Hub
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/ibmz/user-provisioned"
                  >
                    IBM Z
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/power/user-provisioned"
                  >
                    Power
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/openstack"
                  >
                    Red Hat OpenStack
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/rhv"
                  >
                    Red Hat Virtualization
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/vsphere"
                  >
                    vSphere
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/platform-agnostic"
                  >
                    Platform agnostic (x86_64)
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
            ]
          }
          selectVariant="checkbox"
          variant={null}
        >
          <TableHeader />
          <Component />
        </Table>
      </StackItem>
    </Stack>
  </PageSection>
</Fragment>
`;

exports[`<DatacenterTab /> renders correctly without assisted installer 1`] = `
<Fragment>
  <PageSection>
    <Stack
      hasGutter={true}
    >
      <StackItem>
        <Title
          headingLevel="h2"
        >
          datacenter options
        </Title>
      </StackItem>
      <StackItem>
        Create clusters on supported infrastructure using our extensive documentation and installer program.
      </StackItem>
      <StackItem>
        <Table
          aria-label="Installation options table"
          borders={true}
          canSelectAll={true}
          canSortFavorites={true}
          cells={
            Array [
              "Infrastructure provider",
              "Installation options",
            ]
          }
          className="install-options-table"
          contentId="expanded-content"
          dropdownDirection="down"
          dropdownPosition="right"
          expandId="expandable-toggle"
          gridBreakPoint="grid-md"
          isStickyHeader={false}
          isTreeTable={false}
          ouiaSafe={true}
          role="grid"
          rowLabeledBy="simple-node"
          rows={
            Array [
              Array [
                <React.Fragment>
                  <Link
                    to="/install/metal"
                  >
                    Bare Metal (x86_64)
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/arm"
                  >
                    Bare Metal (ARM)
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/azure-stack-hub"
                  >
                    Azure Stack Hub
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/ibmz/user-provisioned"
                  >
                    IBM Z
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/power/user-provisioned"
                  >
                    Power
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/openstack"
                  >
                    Red Hat OpenStack
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/rhv"
                  >
                    Red Hat Virtualization
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/vsphere"
                  >
                    vSphere
                  </Link>
                </React.Fragment>,
                "Full stack automation and pre-existing infrastructure",
              ],
              Array [
                <React.Fragment>
                  <Link
                    to="/install/platform-agnostic"
                  >
                    Platform agnostic (x86_64)
                  </Link>
                </React.Fragment>,
                "Pre-existing infrastructure",
              ],
            ]
          }
          selectVariant="checkbox"
          variant={null}
        >
          <TableHeader />
          <Component />
        </Table>
      </StackItem>
    </Stack>
  </PageSection>
</Fragment>
`;
